src/test/ui/span/mut-ptr-cant-outlive-ref.stderr
error[E0597]: `b` does not live long enough
  --> $DIR/mut-ptr-cant-outlive-ref.rs:19:5
   |
18 |         p = &*b;
   |               - borrow occurs here
19 |     } //~ ERROR `b` does not live long enough
   |     ^ `b` dropped here while still borrowed
20 | }
   | - borrowed value needs to live until here

error: aborting due to previous error

